[gd_scene load_steps=5 format=3 uid="uid://dcw5bchdkvdra"]

[ext_resource type="Script" path="res://scenes/gui/end_screen.gd" id="1_ul4ou"]
[ext_resource type="Texture2D" uid="uid://b61f6dvp55f7c" path="res://assets/images/gui/back_arrow.png" id="2_elrfq"]
[ext_resource type="Texture2D" uid="uid://2wtfqgrldctr" path="res://assets/images/gui/end_screen/end_screen_lose.png" id="3_ncwdk"]
[ext_resource type="Texture2D" uid="uid://bhvn32ynnpuij" path="res://assets/images/gui/end_screen/end_screen_win.png" id="3_wsgp4"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ul4ou")

[node name="WinScreen" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_wsgp4")
expand_mode = 1

[node name="LoseScreen" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ncwdk")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "fart"

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.777778
anchor_right = 0.152344
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_elrfq")
ignore_texture_size = true
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
